added recipe view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-nav-bar></app-nav-bar>
-<app-trending></app-trending>
+<!-- <app-trending></app-trending> -->
 <app-recipes></app-recipes>
 <app-footer></app-footer>
