--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -1,1 +1,43 @@
-<p>recipe-list works!</p>
+<div class="list row">
+    <div class="col-md-8">
+      <div class="input-group mb-3">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Search by name"
+          [(ngModel)]="name"
+        />
+        <div class="input-group-append">
+          <button
+            class="btn btn-outline-secondary"
+            type="button"
+            (click)="searchName()"
+          >
+            Search
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <h4>Recipe List</h4>
+      <ul class="list-group">
+        <li
+          class="list-group-item"
+          *ngFor="let recipe of recipes; let i = index"
+          [class.active]="i == currentIndex"
+          (click)="setCurrentRecipe(recipe, i)"
+        >
+          {{ recipe.name }}
+        </li>
+      </ul>
+      <button class="m-3 btn btn-sm btn-danger" (click)="removeRecipe(currentIndex)">
+        Remove All
+      </button>
+    </div>
+    <div class="col-md-6">
+      <app-recipe-details
+        
+        [currentRecipe]="currentRecipe"
+      ></app-recipe-details>
+    </div>
+  </div>
