--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -2,14 +2,14 @@
     <div class="submit-form">
       <div *ngIf="!submitted">
         <div class="form-group">
-          <label for="title">Title</label>
+          <label for="title">Name</label>
           <input
             type="text"
             class="form-control"
-            id="title"
+            id="name"
             required
             [(ngModel)]="recipe.name"
-            name="title"
+            name="name"
           />
         </div>
         <div class="form-group">
@@ -23,7 +23,7 @@
           />
         </div>
         <div class="form-group">
-            <label for="image">Img</label>
+            <label for="image">Image</label>
             <input
               class="form-control"
               id="image"
@@ -115,7 +115,7 @@
         <button (click)="saveRecipe()" class="btn btn-success">Submit</button>
       </div>
       <div *ngIf="submitted">
-        <h4>Tutorial was submitted successfully!</h4>
+        <h4>Recipe was submitted successfully!</h4>
         <button class="btn btn-success" (click)="newRecipe()">Add</button>
       </div>
     </div>
