--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,21 @@
-<app-nav-bar></app-nav-bar>
+<div>
+    <nav class="navbar navbar-expand navbar-dark bg-dark">
+      <a href="#" class="navbar-brand">RSS</a>
+      <div class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a routerLink="tutorials" class="nav-link">Recipes</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="add" class="nav-link">Add</a>
+        </li>
+      </div>
+    </nav>
+    <div class="container mt-3">
+      <router-outlet></router-outlet>
+    </div>
+</div>
+
+
 <!-- <app-trending></app-trending> -->
 <!-- <app-recipes></app-recipes> -->
 <app-footer></app-footer>
