--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
       <a href="#" class="navbar-brand">RSS</a>
       <div class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a routerLink="tutorials" class="nav-link">Recipes</a>
+          <a routerLink="recipes" class="nav-link">Recipes</a>
         </li>
         <li class="nav-item">
           <a routerLink="add" class="nav-link">Add</a>
@@ -14,8 +14,6 @@
       <router-outlet></router-outlet>
     </div>
 </div>
-
-
 <!-- <app-trending></app-trending> -->
 <!-- <app-recipes></app-recipes> -->
 <app-footer></app-footer>
