added footer styling with bootstrap to match project theme

--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="submit-form">
+    <div class="submit-form  pt-5">
       <div *ngIf="!submitted">
         <div class="form-group">
           <label for="title">Name</label>
