--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div>
-    <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <nav class="navbar navbar-expand navbar-dark bg-black text-black">
       <a href="#" class="navbar-brand">RSS</a>
-      <div class="navbar-nav mr-auto">
-        <li class="nav-item">
+      <div class="navbar-nav">
+        <li class="nav-item ">
           <a routerLink="recipes" class="nav-link">Recipes</a>
         </li>
         <li class="nav-item">
@@ -10,10 +10,9 @@
         </li>
       </div>
     </nav>
+    
     <div class="container mt-3">
       <router-outlet></router-outlet>
     </div>
 </div>
-<!-- <app-trending></app-trending> -->
-<!-- <app-recipes></app-recipes> -->
 <app-footer></app-footer>
