--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -4,8 +4,8 @@
         <input
           type="text"
           class="form-control"
-          placeholder="Search by name"
-          [(ngModel)]="recipes"
+          placeholder="Search by recipe_name"
+          [(ngModel)]="recipe_name"
         />
         <div class="input-group-append">
           <button
@@ -19,15 +19,16 @@
       </div>
     </div>
     <div class="col-md-6">
-      <h4>Recipe List</h4>
+      <h4>Recipes</h4>
       <ul class="list-group">
         <li
           class="list-group-item"
           *ngFor="let recipe of recipes; let i = index"
           [class.active]="i == currentIndex"
-          (click)="setCurrentRecipe(recipe, i)"
+          (click)="setActiveRecipe(recipe, i)"
         >
           {{ recipe.recipe_name }}
+          <img class="img-fluid" src="http://res.cloudinary.com/johnstat101/{{ recipe.recipe_pic }}" alt="">
         </li>
       </ul>
       <button class="m-3 btn btn-sm btn-danger" (click)="removeAllRecipes()">
@@ -36,7 +37,7 @@
     </div>
     <div class="col-md-6">
       <app-recipe-details
-        viewMode=""
+        [viewMode]= true
         [currentRecipe]="currentRecipe"
       ></app-recipe-details>
     </div>
