--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,52 +1,52 @@
-<footer class="pt-4 bg-secondary text-warning">
-  <div class="container" id="footer">
-      <div class="upper-part pb-4 border-bottom">
-          <div class="row">
-              <div class="col-md-4 d-flex align-items-center justify-content-center justify-content-md-start  mb-4 mb-md-0">
-                  <a href="index.html" class="navabar-brand">
-                      <img src="./images/logo.png" alt="RSS" class="img-fluid logo">
-                  </a>
-              </div>
-              <div class="col-6 col-md-4 sitemap">
-                  <div class="">
-                      <h4 class="fw-bold h5">Sitemap</h4>
-                      <ul>
-                      <a href="#rss">RSS</a>
-                      <a href="features">Features</a>
-                      <a href="login">Login</a>
-                      <a href="logout">Logout</a>
-                      <a href="search">search</a>
-                    </ul>
-                  </div>
-              </div>
-              <div class="col-6 col-md-4 subscription d-flex justify-content-start justify-content-md-center">
-                  <div class="">
-                      <h4 class="fw-bold h5">Contact</h4>
-                      <a href="mailto:contact@buddies.com" class="pb-1">contact@rss.com</a>
-                      <a href="tel:+254712345678" class="pb-1">+254712345678</a>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <div class="lower-part py-3">
-          <div class="row">
-              <div class="col-6 col-md-4 offset-md-4 text-md-start">
-                  <small>© 2021 Reserved</small>
-              </div>
-              <div class="col-6 col-md-4 text-end">
-                  <div class="socials d-flex justify-content-end">
-                      <a href="#" class="px-1">
-                          <img src="./images/fb.png" alt="Facebook" height="30">
-                      </a>
-                      <a href="#" class="px-1">
-                          <img src="./img/twit.png" alt="Facebook" height="30">
-                      </a>
-                      <a href="#" class="px-1">
-                          <img src="./img/ig.png" alt="Facebook" height="30">
-                      </a>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-</footer>
+<footer class="pt-4 bg-dark text-white pt-4">
+    <div class="container" id="footer">
+        <div class="upper-part pb-4 border-bottom">
+            <div class="row">
+                <div class="col-md-4 d-flex align-items-center justify-content-center justify-content-md-start  mb-4 mb-md-0">
+                    <a href="index.html" class="navabar-brand">
+                        <img src="/assets/img/rsslogo.png" alt="RSS" class="img-fluid logo">
+                    </a>
+                </div>
+                <div class="col-6 col-md-4 sitemap">
+                    <div class="">
+                        <h4 class="fw-bold h5">Sitemap</h4>
+                        <ul>
+                        <a href="#rss">RSS</a>
+                        <a href="features">Features</a>
+                        <a href="login">Login</a>
+                        <a href="logout">Logout</a>
+                        <a href="search">search</a>
+                      </ul>
+                    </div>
+                </div>
+                <div class="col-6 col-md-4 subscription d-flex justify-content-start justify-content-md-center">
+                    <div class="">
+                        <h4 class="fw-bold h5">Contact</h4>
+                        <a href="mailto:contact@buddies.com" class="pb-1">contact@buddies.com</a>
+                        <a href="tel:+254712345678" class="pb-1">+254712345678</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="lower-part py-3">
+            <div class="row">
+                <div class="col-6 col-md-4 offset-md-4 text-md-start">
+                    <small>© 2022 Reserved</small>
+                </div>
+                <div class="col-6 col-md-4 text-end">
+                    <div class="socials d-flex justify-content-end">
+                        <a href="#" class="px-1">
+                            <img src="/assets/img/rssfb.png" alt="Facebook" height="30">
+                        </a>
+                        <a href="#" class="px-1">
+                            <img src="/assets/img/rssinsta.png" alt="Facebook" height="30">
+                        </a>
+                        <a href="#" class="px-1">
+                            <img src="/assets/img/rsstwitter.png" alt="Facebook" height="30">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </footer>
