--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -50,3 +50,9 @@ nav ul li a:hover {
 .navbar-dark .navbar-nav .nav-link:hover {
   color: #E6E6E6;
 }
+.navbar-brand {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #ccc;
+  margin-right: 150px; 
+}
