--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-md-4 d-flex align-items-center justify-content-center justify-content-md-start  mb-4 mb-md-0">
                     <a href="index.html" class="navabar-brand">
-                        <img src="/assets/img/rsslogo.png" alt="RSS" class="img-fluid logo">
+                        <img src="/assets/img/rsslog1.jpeg" alt="RSS" class="img-fluid logo">
                     </a>
                 </div>
                 <div class="col-6 col-md-4 sitemap">
