--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,7 +12,7 @@
                         <h4 class="fw-bold h5">Sitemap</h4>
                         <ul>
                         <a href="#rss">RSS</a>
-                        <a href="features">Features</a>
+                        <a href="#recipes">Recipes</a>
                         <a href="login">Login</a>
                         <a href="logout">Logout</a>
                         <a href="search">search</a>
