--- a/src/app/recipe-details/recipe-details.component.css
+++ b/src/app/recipe-details/recipe-details.component.css
@@ -2,3 +2,18 @@
     max-width: 400px;
     margin: auto;
   }
+  .badge-pill {
+    border-radius: 10px;
+  }
+  .badge-pill:hover {
+    background-color: #ccc;
+  }
+  .badge-pill:active {
+    background-color: #ccc;
+  }
+  .badge-pill:focus {
+    background-color: #ccc;
+  }
+  .badge{
+    background-color: orangered;
+  }
